[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Resources/Style.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/MenuBarItemsButton.gd" type="Script" id=3]
[ext_resource path="res://Scripts/WADFileInfo.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Run.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.192157, 0.223529, 0.403922, 1 )

[node name="Main" type="Control"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
__meta__ = {
"_edit_lock_": true
}

[node name="Items" type="VBoxContainer" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
custom_constants/separation = 0

[node name="MenuBar" type="PanelContainer" parent="Items"]
light_mask = 0
margin_right = 600.0
margin_bottom = 36.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06

[node name="Items" type="HBoxContainer" parent="Items/MenuBar"]
light_mask = 0
margin_left = 20.0
margin_top = 1.0
margin_right = 580.0
margin_bottom = 35.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="File" type="MenuButton" parent="Items/MenuBar/Items"]
light_mask = 0
margin_right = 43.0
margin_bottom = 34.0
focus_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = false
shortcut_in_tooltip = false
action_mode = 1
text = "File"
items = [ "Open gzdoom.ini", null, 0, false, false, 0, 0, null, "", false ]
script = ExtResource( 3 )

[node name="Help" type="Button" parent="Items/MenuBar/Items"]
light_mask = 0
margin_left = 47.0
margin_right = 97.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
text = "Help"
flat = true
script = ExtResource( 3 )

[node name="About" type="Button" parent="Items/MenuBar/Items"]
light_mask = 0
margin_left = 101.0
margin_right = 159.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
text = "About"
flat = true
script = ExtResource( 3 )

[node name="ContentArea" type="PanelContainer" parent="Items"]
light_mask = 0
margin_top = 36.0
margin_right = 600.0
margin_bottom = 480.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Items" type="HBoxContainer" parent="Items/ContentArea"]
light_mask = 0
margin_right = 600.0
margin_bottom = 444.0
mouse_filter = 2
custom_constants/separation = 0

[node name="WADFiles" type="ScrollContainer" parent="Items/ContentArea/Items"]
light_mask = 0
margin_right = 400.0
margin_bottom = 444.0
mouse_filter = 1
input_pass_on_modal_close_click = false
size_flags_horizontal = 3

[node name="List" type="VBoxContainer" parent="Items/ContentArea/Items/WADFiles"]
light_mask = 0
margin_right = 400.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/separation = 0

[node name="WADFileInfo" type="ScrollContainer" parent="Items/ContentArea/Items"]
light_mask = 0
margin_left = 400.0
margin_right = 600.0
margin_bottom = 444.0
mouse_filter = 1
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
script = ExtResource( 4 )

[node name="Info" type="VBoxContainer" parent="Items/ContentArea/Items/WADFileInfo"]
light_mask = 0
margin_right = 200.0
margin_bottom = 444.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Details" type="VBoxContainer" parent="Items/ContentArea/Items/WADFileInfo/Info"]
light_mask = 0
margin_right = 200.0
margin_bottom = 407.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_vertical = 3
custom_constants/separation = 10

[node name="TitlePic" type="TextureRect" parent="Items/ContentArea/Items/WADFileInfo/Info/Details"]
light_mask = 0
margin_right = 200.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 2
input_pass_on_modal_close_click = false
expand = true
stretch_mode = 7

[node name="Title" type="RichTextLabel" parent="Items/ContentArea/Items/WADFileInfo/Info/Details"]
margin_top = 138.0
margin_right = 200.0
margin_bottom = 153.0
bbcode_enabled = true
bbcode_text = "[center]Doom WAD Title[/center]"
text = "Doom WAD Title"
fit_content_height = true
scroll_active = false

[node name="Buttons" type="HBoxContainer" parent="Items/ContentArea/Items/WADFileInfo/Info"]
light_mask = 0
margin_top = 411.0
margin_right = 200.0
margin_bottom = 444.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08

[node name="Run" type="Button" parent="Items/ContentArea/Items/WADFileInfo/Info/Buttons"]
light_mask = 0
margin_right = 200.0
margin_bottom = 33.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/normal = SubResource( 2 )
text = "Run WAD"
script = ExtResource( 5 )
